--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -6796,16 +6796,13 @@ msgid "GZip output buffering"
 msgstr "GZip 输出缓冲"
 
 #: setup/lib/messages.inc.php:217
-#, fuzzy
 #| msgid ""
 #| "[kbd]SMART[/kbd] - i.e. descending order for fields of type TIME, DATE, "
 #| "DATETIME and TIMESTAMP, ascending order otherwise"
 msgid ""
 "[kbd]SMART[/kbd] - i.e. descending order for columns of type TIME, DATE, "
 "DATETIME and TIMESTAMP, ascending order otherwise"
-msgstr ""
-"[kbd]SMART[/kbd] - 如：对 TIME、DATE、DATETIME 和 TIMESTAMP 类型的字段递减排"
-"序，其他字段递增"
+msgstr "[kbd]SMART[/kbd] - 如：对 TIME、DATE、DATETIME 和 TIMESTAMP 类型的字段递减排序，其他字段递增"
 
 #: setup/lib/messages.inc.php:218
 msgid "Default sorting order"
