--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-03 20:05+0200\n"
+"PO-Revision-Date: 2010-06-03 20:06+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2670,7 +2670,7 @@ msgstr "Velikosti rasti podatkovne datoteke"
 
 #: libraries/engines/pbxt.lib.php:69
 msgid "The grow size of the handle data (.xtd) files."
-msgstr ""
+msgstr "Velikost rasti datotek za ravnanje s podatki (.xtd)."
 
 #: libraries/engines/pbxt.lib.php:73
 msgid "Row file grow size"
