--- a/po/sl.po
+++ b/po/sl.po
@@ -2666,7 +2666,7 @@ msgstr ""
 
 #: libraries/engines/pbxt.lib.php:68
 msgid "Data file grow size"
-msgstr "Velikosti rasti podatkovnih datotek"
+msgstr "Velikost rasti podatkovnih datotek"
 
 #: libraries/engines/pbxt.lib.php:69
 msgid "The grow size of the handle data (.xtd) files."
