--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-03 20:06+0200\n"
+"PO-Revision-Date: 2010-06-03 20:07+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2678,7 +2678,7 @@ msgstr "Velikost rasti datotek vrstic"
 
 #: libraries/engines/pbxt.lib.php:74
 msgid "The grow size of the row pointer (.xtr) files."
-msgstr ""
+msgstr "Velikost rasti datotek kazalca vrstic (.xtr)."
 
 #: libraries/engines/pbxt.lib.php:78
 msgid "Log file count"
