Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,13 +4,13 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-05-28 14:10+0200\n"
-"Last-Translator:  <torsten.funck@googlemail.com>\n"
+"PO-Revision-Date: 2010-06-03 20:49+0200\n"
+"Last-Translator:  <canin@in.com>\n"
 "Language-Team: german <de@li.org>\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.1\n"
 
@@ -454,7 +454,6 @@ msgid "Add/Delete criteria rows"
 msgstr "Zeilen hinzufügen/entfernen"
 
 #: db_qbe.php:596
-#, fuzzy
 #| msgid "Add/Delete Field Columns"
 msgid "Add/Delete columns"
 msgstr "Spalten hinzufügen/entfernen"
