--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-04 14:05+0200\n"
+"PO-Revision-Date: 2010-06-04 14:06+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -7306,11 +7306,10 @@ msgid "Verbose name of this server"
 msgstr "服务器名称"
 
 #: setup/lib/messages.inc.php:329
-#, fuzzy
 #| msgid ""
 #| "Whether a user should be displayed a &quot;show all (records)&quot; button"
 msgid "Whether a user should be displayed a &quot;show all (rows)&quot; button"
-msgstr "显示给用户一个 &quot;显示所有 (记录)&quot; 按钮"
+msgstr "设置是否给用户显示一个 &quot;显示所有 (记录)&quot; 的按钮"
 
 #: setup/lib/messages.inc.php:330
 msgid "Allow to display all the rows"
