--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-04 14:06+0200\n"
+"PO-Revision-Date: 2010-06-04 14:08+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -7587,10 +7587,9 @@ msgid "Ignore"
 msgstr "忽略"
 
 #: tbl_change.php:728
-#, fuzzy
 #| msgid " Because of its length,<br /> this field might not be editable "
 msgid " Because of its length,<br /> this column might not be editable "
-msgstr " 由于长度限制<br />此字段可能无法编辑 "
+msgstr " 因长度问题，<br /> 该字段可能无法编辑 "
 
 #: tbl_change.php:888
 msgid "Remove BLOB Repository Reference"
