--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -548,10 +548,9 @@ msgid "Inside table(s):"
 msgstr "Inside table(s):"
 
 #: db_search.php:355
-#, fuzzy
 #| msgid "Inside field:"
 msgid "Inside column:"
-msgstr "Inside field:"
+msgstr "Inside column:"
 
 #: db_structure.php:81 db_structure.php:82 db_structure.php:94
 #: db_structure.php:95 db_structure.php:107 db_structure.php:108
