Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1982,10 +1982,9 @@ msgid "Create table on database %s"
 msgstr "Create table on database %s"
 
 #: libraries/display_create_table.lib.php:57
-#, fuzzy
 #| msgid "Number of fields"
 msgid "Number of columns"
-msgstr "Number of fields"
+msgstr "Number of columns"
 
 #: libraries/display_export.lib.php:42
 msgid "Could not load export plugins, please check your installation!"
