--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2266,10 +2266,9 @@ msgid "Relational key"
 msgstr "Relational key"
 
 #: libraries/display_tbl.lib.php:588
-#, fuzzy
 #| msgid "Relational display field"
 msgid "Relational display column"
-msgstr "Relational display field"
+msgstr "Relational display column"
 
 #: libraries/display_tbl.lib.php:595
 msgid "Show binary contents"
