--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2729,10 +2729,9 @@ msgstr "Remove CRLF characters within columns"
 #: libraries/export/ods.php:24 libraries/export/odt.php:50
 #: libraries/export/texytext.php:34 libraries/export/xls.php:24
 #: libraries/export/xlsx.php:24
-#, fuzzy
 #| msgid "Put fields names in the first row"
 msgid "Put columns names in the first row"
-msgstr "Put fields names in the first row"
+msgstr "Put columns names in the first row"
 
 #: libraries/export/excel.php:18
 msgid "CSV for MS Excel"
