--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4678,10 +4678,9 @@ msgid "Add %s column(s)"
 msgstr "Add %s column(s)"
 
 #: libraries/tbl_properties.inc.php:784 tbl_structure.php:536
-#, fuzzy
 #| msgid "You have to add at least one field."
 msgid "You have to add at least one column."
-msgstr "You have to add at least one field."
+msgstr "You have to add at least one column."
 
 #: libraries/tbl_triggers.lib.php:29
 msgid "Event"
