Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -8150,10 +8150,9 @@ msgid "Operator"
 msgstr "Operator"
 
 #: tbl_select.php:270
-#, fuzzy
 #| msgid "Select fields (at least one):"
 msgid "Select columns (at least one):"
-msgstr "Select fields (at least one):"
+msgstr "Select columns (at least one):"
 
 #: tbl_select.php:288
 msgid "Add search conditions (body of the \"where\" clause):"
