--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -8176,10 +8176,10 @@ msgid "None"
 msgstr "None"
 
 #: tbl_structure.php:374
-#, fuzzy, php-format
+#, php-format
 #| msgid "Table %s has been dropped"
 msgid "Column %s has been dropped"
-msgstr "Table %s has been dropped"
+msgstr "Column %s has been dropped"
 
 #: tbl_structure.php:385
 #, php-format
