--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-04 23:12+0200\n"
+"PO-Revision-Date: 2010-06-04 23:14+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -3434,6 +3434,8 @@ msgid ""
 "The number of INSERT DELAYED handler threads in use. Every different table "
 "on which one uses INSERT DELAYED gets its own thread."
 msgstr ""
+"Število upravljalnih niti INSERT DELAYED v uporabi. Vsaka različna tabela, "
+"na kateri se uporabi INSERT DELAYED, dobi svojo lastno nit."
 
 #: libraries/messages.inc.php:69
 msgid "The number of INSERT DELAYED rows written."
