--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-04 23:14+0200\n"
+"PO-Revision-Date: 2010-06-04 23:18+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -3459,6 +3459,9 @@ msgid ""
 "table with a given name. This is called discovery. Handler_discover "
 "indicates the number of time tables have been discovered."
 msgstr ""
+"Strežnik MySQL lahko vpraša skladiščni pogon NDB Cluster, če ve za tabelo z "
+"navedenim imenom. Temu se reče odkritje. Handler_discover kaže koliko krat "
+"so bile tabele odkrite."
 
 #: libraries/messages.inc.php:74
 msgid ""
