Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-04 23:18+0200\n"
+"PO-Revision-Date: 2010-06-04 23:21+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -3469,6 +3469,9 @@ msgid ""
 "it suggests that the server is doing a lot of full index scans; for example, "
 "SELECT col1 FROM foo, assuming that col1 is indexed."
 msgstr ""
+"Koliko krat je bil prvi vnos prebran iz indeksa. Če je vrednost visoka, "
+"kaže, da strežnik izvaja mnogo pregledov indeksa; na primer: SELECT col1 "
+"FROM foo, pri čemer se predpostavlja, da je col1 indeksiran."
 
 #: libraries/messages.inc.php:75
 msgid ""
