Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-04 23:21+0200\n"
+"PO-Revision-Date: 2010-06-04 23:23+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -3478,6 +3478,9 @@ msgid ""
 "The number of requests to read a row based on a key. If this is high, it is "
 "a good indication that your queries and tables are properly indexed."
 msgstr ""
+"Število zahtev za branje vrstice temelječih na ključu. Če je ta vrednost "
+"visoka, je to dober znak, da so vaše poizvedbe in tabele primerno "
+"indeksirane."
 
 #: libraries/messages.inc.php:76
 msgid ""
