--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-04 23:23+0200\n"
+"PO-Revision-Date: 2010-06-04 23:25+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -3405,9 +3405,9 @@ msgid ""
 "based instead of disk-based."
 msgstr ""
 "Število začasnih tabel na disku, ki jih je strežnik samodejno ustvaril med "
-"izvajanjem stavkov. Če je Created_tmp_disk_tables velika, boste morda želeli "
-"povečati vrednost tmp_table_size, zaradi česar bodo začasne tabele "
-"temeljile na pomnilniku namesto na disku."
+"izvajanjem izjav. Če je Created_tmp_disk_tables velika, boste morda želeli "
+"povečati vrednost tmp_table_size, zaradi česar bodo začasne tabele temeljile "
+"na pomnilniku namesto na disku."
 
 #: libraries/messages.inc.php:65
 msgid "How many temporary files mysqld has created."
