--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-04 23:25+0200\n"
+"PO-Revision-Date: 2010-06-04 23:27+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -3488,6 +3488,9 @@ msgid ""
 "incremented if you are querying an index column with a range constraint or "
 "if you are doing an index scan."
 msgstr ""
+"Število zahtev za branje naslednje vrstice v zaporedju ključa. To je "
+"povečano, če poizvedujete po indeksnem stolpcu z omejitvijo obsega ali če "
+"pregledujete indeks."
 
 #: libraries/messages.inc.php:77
 msgid ""
