--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-04 23:27+0200\n"
+"PO-Revision-Date: 2010-06-04 23:29+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -3497,6 +3497,8 @@ msgid ""
 "The number of requests to read the previous row in key order. This read "
 "method is mainly used to optimize ORDER BY ... DESC."
 msgstr ""
+"Število poizvedb za branje prejšnje vrstice v zaporedju ključa. Ta postopek "
+"branja se uporablja predvsem za optimizacijo ORDER BY ... DESC."
 
 #: libraries/messages.inc.php:78
 msgid ""
