Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-04 23:29+0200\n"
+"PO-Revision-Date: 2010-06-04 23:36+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -3507,6 +3507,10 @@ msgid ""
 "probably have a lot of queries that require MySQL to scan whole tables or "
 "you have joins that don't use keys properly."
 msgstr ""
+"Število zahtev za branje vrstice temelječih na ustaljenem položaju. To je "
+"visoko, če izvajate veliko poizvedb, ki potrebujejo razvrščanje rezultata. "
+"Najverjetneje imate veliko poizvedb, ki od MySQL zahtevajo pregled celotnih "
+"tabel, ali stike, ki ne uporabljajo ključev pravilno."
 
 #: libraries/messages.inc.php:79
 msgid ""
