Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-31 14:33-0400\n"
-"PO-Revision-Date: 2010-06-04 23:36+0200\n"
+"PO-Revision-Date: 2010-06-04 23:39+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -3519,6 +3519,10 @@ msgid ""
 "tables are not properly indexed or that your queries are not written to take "
 "advantage of the indexes you have."
 msgstr ""
+"Število zahtev za branje naslednje vrstice v podatkovni datoteki. To je "
+"visoko, če izvajate veliko pregledov tabel. Na splošno to kaže, da vaše "
+"tabele niso primerno indeksirane ali da vaše poizvedbe ne izkoristijo "
+"prednosti indeksov, ki jih imate."
 
 #: libraries/messages.inc.php:80
 msgid "The number of internal ROLLBACK statements."
